@@ -1,35 +1,3 @@
-<div i18n:domain="plone"
-     id="ftw-edit-bar"
-     tal:define="ploneview context/@@plone;"
-     tal:condition="ploneview/showEditableBorder">
-
-    <tal:block define="view_actions ploneview/prepareObjectTabs;">
-
-        <h5 class="hiddenStructure"
-            tal:condition="view_actions"
-            i18n:translate="heading_views">Views</h5>
-
-
-        <div class="contentActions">
-            <div i18n:domain="plone" i18n:translate="" tal:replace="structure provider:plone.contentmenu" />
-        </div>
-
-        <ul class="contentViews"
-            id="content-views">
-
-            <tal:views repeat="action view_actions">
-              <li tal:define="selected action/selected|nothing;"
-                  tal:attributes="id string:contentview-${action/id};
-                                  class python:selected and 'selected' or 'plain'">
-                <a href=""
-                   tal:content="action/title"
-                   tal:attributes="href action/url;"
-                   i18n:translate="">
-                View name
-                </a>
-              </li>
-            </tal:views>
-        </ul>
-    </tal:block>
-
-</div>
+<div id="edit-bar"
+    tal:condition="context/@@plone/showEditableBorder"
+    tal:content="structure provider:plone.contentviews" />
