@@ -48,10 +48,15 @@
         <viewlet name="plone.personal_bar"/>
     </hidden>
 
-    <!-- content views -->
+    <!-- ftw.contentmenu -->
+    <hidden manager="plone.contentviews" skinname="*">
+      <viewlet name="plone.contentviews" remove="True"/>
+      <viewlet name="plone.contentactions" remove="True"/>
+    </hidden>
+
     <order manager="plone.contentviews" skinname="iZug Base Theme">
-        <viewlet name="plone.contentviews"/>
-        <viewlet name="plone.contentactions"/>
+      <viewlet name="plone.contentactions"/>
+      <viewlet name="plone.contentviews"/>
     </order>
 
     <!-- below content -->
