@@ -126,7 +126,7 @@ div.to_top,
 .close,
 .visualNoPrint,
 #client_title,
-#ftw-edit-bar,
+#edit-bar,
 #debug_info,
 #plone-lock-status,
 #plone-document-byline,
